[gd_scene load_steps=3 format=3 uid="uid://c8cgh3kha7p2b"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_32tki"]
[ext_resource type="AudioStream" uid="uid://bgvgrsr6n4ym1" path="res://Sound/platformer_level03_loop.ogg" id="2_6ofvd"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_32tki")

[node name="background" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.215686, 0.215686, 0.215686, 0.780392)

[node name="LivesLabel" type="Label" parent="."]
offset_left = 20.0
offset_right = 295.0
offset_bottom = 91.0
theme_override_font_sizes/font_size = 30
text = "LIVES: 10"
vertical_alignment = 1

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 40.0
offset_right = 295.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 30
text = "Coins: 0"
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -198.0
offset_right = 178.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start Game"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Avoid the potholes!"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6ofvd")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
